# toy-lang

./: .gitignore  Cargo.toml  Readme.md
node/toy-lang-js/: package-lock.json  package.json  tsconfig.json
node/toy-lang-js/public/: index.html  toy-lang.js
node/toy-lang-js/src/: index.ts
src/: lexer.rs  lib.rs  main.rs  test.rs  token.rs
src/lexer/: mod.rs
